--- a/main.css
+++ b/main.css
@@ -1,41 +1,30 @@
-.body{
-    display:flex;
-    
-}
+body{ padding:10px;margin:0;  }
 .main-content{
+    padding:0;margin:0;
+   
     display:flex;
     flex-direction: row;
-    gap:5px;
+    gap:20px;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
 }
 .block{
     width:40%;
-    height: 300px;
+    border:2px solid #333;
+    box-shadow: 1px 1px 3px #333;
     display: flex;
     align-items: center;
     justify-content: center;
-    border:1px solid  #ccc;
     border-radius: 5px;
 }
-.block-1{
-    background: rgba(0,0,255,0.5);
+.block img{
+    width: 100%;
 }
-.block-2{
-    background: rgba(0,0,200,0.5);
-}
-.block-3{
-    background: rgba(0,0,150,0.5);
-}
-.block-4{
-    background: rgba(0,0,100,0.5);
-}
-.block-5{
-    background: rgba(255,0,0,0.5);
-}
-.block-6{
-    background: rgba(200,0,255,0.5);
-}.block-7{
-    background: rgba(0,255,255,0.5);
-}
+.block-1{ background: rgba(0,0,255,0.5);}
+.block-2{ background: rgba(0,0,200,0.5);}
+.block-3{ background: rgba(0,0,150,0.5);}
+.block-4{ background: rgba(0,0,100,0.5);}
+.block-5{ background: rgba(255,0,0,0.5);}
+.block-6{ background: rgba(200,0,255,0.5);}
+.block-7{ background: rgba(0,255,255,0.5);}
